# FE-JEPA

./: .gitignore  FE-JEPA_proposal_EN.tex  README.md  README.txt  RESULTS.md  pyproject.toml
configs/: phase1_2d.json  smoke_cpu.json
runs/: fejepa.pt
runs/.ipynb_checkpoints/: report-checkpoint.json
src/fejepa/: __init__.py  baselines.py  cli.py  device.py  losses.py  metrics.py
src/fejepa/anchor/: __init__.py  energy.py
src/fejepa/data/: __init__.py  archive.py
src/fejepa/experiments/: __init__.py  falsification.py  regimes.py  runner.py
src/fejepa/fe/: __init__.py  elasticity.py  generator.py  meshing.py  stress.py
src/fejepa/models/: __init__.py  decoder.py  encoder.py  fejepa.py  gnn.py  predictor.py  sigreg.py
src/fejepa/train/: __init__.py  g0.py  pretrain.py  schedule.py  supervised.py
tests/: conftest.py  test_anchor.py  test_device.py  test_experiments.py  test_fe.py  test_g0.py  test_generator.py  test_models.py  test_runner.py  test_sigreg.py  test_stress.py  test_train.py  test_xres.py
