[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fejepa"
version = "0.1.0"
description = "FE-JEPA: Energy-Anchored Joint-Embedding Predictive Pretraining for Finite-Element Surrogates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FE-JEPA contributors" }]
keywords = ["finite-element", "JEPA", "self-supervised-learning", "surrogate-models", "scientific-machine-learning"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-fem>=9.0",
    "meshio>=5.3",
    "torch>=2.1",
]

[project.optional-dependencies]
gen = ["gmsh>=4.11"]
dev = ["pytest>=7.0", "matplotlib>=3.6"]

[project.scripts]
fejepa = "fejepa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
